<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Services">
            <menu>
               <!-- <item
                    android:id="@+id/navDashboard"
                    android:title="@string/menu_home" />   -->
              <item
                  android:id="@+id/navAddTableAdd"
                  android:title="@string/menu_slideshow" />

              <item
                  android:id="@+id/navTableDisplay"
                  android:title="@string/menu_ddailySummary" />
                <item
                    android:id="@+id/navDailyReport"
                    android:title="@string/menu_dailyReport" />
                <item
                    android:id="@+id/navReportby2Dates"
                    android:title="@string/menu_Reportby2Dates" />
              <item
                  android:id="@+id/navPartyReport"
                  android:title="@string/menu_partyRepot" />
                <item
                    android:id="@+id/navBackup"
                    android:title="@string/menu_backup" />

          </menu>
      </item>
  </group>

  <item android:title="Communicate">
      <menu>
          <item
              android:id="@+id/nav_share"
              android:icon="@drawable/ic_menu_share"
              android:title="@string/menu_share" />
          <item
              android:id="@+id/nav_send"
              android:icon="@drawable/ic_menu_send"
              android:title="@string/menu_send" />
      </menu>
  </item>


</menu>
